--- a/charts/prow/templates/hook-ingress.yaml
+++ b/charts/prow/templates/hook-ingress.yaml
@@ -1,3 +1,5 @@
+# Hook ingress enabled: {{ .Values.hook.ingress.enabled }}
+{{- if .Values.hook.ingress.enabled }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -19,3 +21,4 @@ spec:
   - hosts:
     - {{ quote .Values.hook.ingress.host }}
     secretName: {{ quote .Values.hook.ingress.host }}
+{{- end }}
