--- a/charts/prow/templates/hook-service.yaml
+++ b/charts/prow/templates/hook-service.yaml
@@ -11,4 +11,4 @@ spec:
     port: 8888
   - name: metrics
     port: 9090
-  type: ClusterIP
+  type: {{ default "NodePort" .Values.hook.service.type }}
