--- a/charts/prow/templates/tide-deployment.yaml
+++ b/charts/prow/templates/tide-deployment.yaml
@@ -29,10 +29,12 @@ spec:
         - --config-path=/etc/config/config.yaml
         - --github-endpoint=http://ghproxy
         - --github-endpoint=https://api.github.com
-        - --github-token-path=/etc/github/oauth
+{{ if .Values.secrets.bucketGcsCredentials }}
         - --gcs-credentials-file=/etc/service-account/service-account.json
+
         - --history-uri=gs://{{ .Values.prowbucketname }}/tide-history.json
         - --status-path=gs://{{ .Values.prowbucketname }}/tide-status-checkpoint.yaml
+{{ end }}
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
         ports:
@@ -47,9 +49,11 @@ spec:
         - name: config
           mountPath: /etc/config
           readOnly: true
+{{ if .Values.secrets.bucketGcsCredentials }}
         - name: service-account
           mountPath: /etc/service-account
           readOnly: true
+{{ end }}
         - name: job-config
           mountPath: /etc/job-config
           readOnly: true
@@ -60,9 +64,11 @@ spec:
       - name: config
         configMap:
           name: config
+{{ if .Values.secrets.bucketGcsCredentials }}
       - name: service-account
         secret:
           secretName:  {{ .Values.secrets.bucketGcsCredentials }}
+{{ end }}
       - name: job-config
         configMap:
           name: job-config
