feature: add values for configmap and plugins

--- a/charts/prow/templates/config-configmap.yaml
+++ b/charts/prow/templates/config-configmap.yaml
@@ -12,3 +12,4 @@ data:
   config.yaml: |-
     prowjob_namespace: {{ .Release.Namespace }}
     pod_namespace: {{ .Values.podNamespace }}
+    {{ .Values.config }}
