feature: toggle hmac

--- a/charts/prow/templates/hmac-token-secret.yaml
+++ b/charts/prow/templates/hmac-token-secret.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.hmacToken.generate }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: hmac-token
+  name: {{ .Values.secrets.hmacToken }}
   annotations:
 # https://github.com/helm/helm/issues/3053#issuecomment-518403351
     "helm.sh/hook": "pre-install"
@@ -9,3 +10,4 @@ metadata:
 type: Opaque
 data:
   hmac: {{ randAlphaNum 20 | b64enc | quote }}
+{{- end }}
