--- a/charts/prow/templates/hook-deployment.yaml
+++ b/charts/prow/templates/hook-deployment.yaml
@@ -87,7 +87,7 @@ spec:
 {{ end }}
       - name: hmac
         secret:
-          secretName: hmac-token
+          secretName: {{ .Values.secrets.hmacToken }}
       - name: oauth
         secret:
           secretName: {{ .Values.secrets.githubToken }}
