feature: add option to remove cache

--- a/charts/prow/templates/ghproxy-deployment.yaml
+++ b/charts/prow/templates/ghproxy-deployment.yaml
@@ -30,9 +30,13 @@ spec:
         - containerPort: 8888
         - containerPort: 9090
         volumeMounts:
+{{- if .Values.ghproxy.cache.persistent }}
         - name: cache
           mountPath: /cache
+{{- end }}
       volumes:
+{{- if .Values.ghproxy.cache.persistent }}
       - name: cache
         persistentVolumeClaim:
           claimName: ghproxy
+{{- end }}
