--- a/charts/prow/templates/ghproxy-pvc.yaml
+++ b/charts/prow/templates/ghproxy-pvc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ghproxy.cache.persistent }}
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
@@ -12,3 +13,4 @@ spec:
     requests:
       storage: {{ .Values.ghproxy.cache.sizeGB | add 1 }}Gi
   storageClassName: {{ .Values.ghproxy.cache.storageClassName }}
+{{- end }}
