--- a/charts/prow/values.yaml
+++ b/charts/prow/values.yaml
@@ -200,6 +200,7 @@ ghproxy:
   image: gcr.io/k8s-prow/ghproxy:v20200610-6c96a0a6ed
   replicas: 1
   cache:
+    persistent: true
     sizeGB: 19
     storageClassName: ssd-retain
   tolerations:
